now using function to create Long our Double that are not deprecated